# openplan

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  EXAMPLE.md  HANDOFF.md  HOMEPAGE_SPECS.md  LICENSE  MANIFEST.in  PLAN.md  PLAN.md.bak  README.md  SECURITY.md  biome.json  drizzle.config.ts  fly.toml  package-lock.json  package.json  pyproject.toml  run_api.py  server.json  smithery.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
.opencode/: AGENTS.md
.opencode/commands/: checkpoint.md  plan.md  simulate.md  status.md
.opencode/skills/openplan/: SKILL.md
docs/: bootstrap-fix.md
drizzle/: 0000_colorful_mongu.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: rlhf_pipeline.py  telemetry_server.py  validate-adapter.sh
services/telemetry/: .env.example  auth.py  db.py  main.py  models.py  requirements.txt
src/: cli.ts  config.ts  server.ts
src/adapters/: cost-probe.ts  mesh.ts
src/core/: costs.ts  domain.ts  logger.ts  planner.ts  ports.ts  reviewer.ts  schemas.ts  tokenizer.ts  tracker.ts
src/db/: connection.ts  schema.ts  store.ts
src/handlers/: checkpoint-handler.ts  plan-handler.ts  resources.ts  review-handler.ts
src/openplan/: __init__.py  __main__.py  cli.py  config.py  handler_utils.py  migrate.py  server.py
src/openplan/adapters/: cost_probe.py  mesh.py
src/openplan/core/: activation.py  analytics.py  bandit.py  conditions.py  costs.py  embedding.py  errors.py  estimator.py  export.py  goals.py  graph.py  graph_ops.py  ids.py  insight_propagation.py  learning.py  learnings.py  maintenance.py  planner.py  planning.py  ports.py  read.py  reasoning.py  recommend.py  resolve.py  retro.py  reviewer.py  rlhf.py  self_tune.py  simulate.py  state.py  telemetry.py  telemetry_client.py  tracker.py  transaction.py  tree.py  utils.py
src/openplan/db/: connection.py  schema.py
src/openplan/handlers/: __init__.py  act_handler.py  checkpoint_handler.py  complete_handler.py  export_handler.py  init_handler.py  plan_handler.py  recommend_handler.py  review_handler.py  start_handler.py
src/openplan/tools/: definitions.py
src/openplan_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: adapters.test.ts  conftest.py  core.test.ts  dist-e2e.sh  handlers.test.ts  mcp-e2e.sh  planner.test.ts  reviewer.test.ts  test_act.py  test_activation.py  test_analytics.py  test_branch.py  test_compress.py  test_core.py  test_diagnostics.py  test_embedding.py  test_export.py  test_insight_propagation.py  test_learn.py  test_learning.py  test_maintenance.py  test_observe.py  test_plan.py  test_read_state.py  test_reasoning.py  test_scale.py  test_telemetry.py  tracker.test.ts
