[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openplan"
version = "0.2.1"
description = "AI-native state space planner — MCP server with state graphs, A* planning, and self-calibrating edge weights"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenPlan Contributors"},
]
keywords = ["mcp", "planning", "ai-agent", "state-space", "project-management", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
embed = ["fastembed>=0.5.0"]
ann = ["sqlite-vec>=0.1.9"]
all = ["openplan[embed,ann,dev]"]

[project.urls]
Homepage = "https://github.com/anomalyco/opencode"
Documentation = "https://opencode.ai/docs/openplan"
Source = "https://github.com/anomalyco/opencode/tree/main/docs/workflow/openplan"
Changelog = "https://github.com/anomalyco/opencode/blob/main/docs/workflow/openplan/CHANGELOG.md"

[project.scripts]
openplan-server = "openplan.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openplan*"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.pytest.ini_options]
markers = [
    "slow: performance benchmarks that create 5k+ nodes",
]
testpaths = ["tests"]
