[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openplan-mcp"
version = "0.9.5"
description = "Waze for AI agents — plan, track, and learn from software projects. 3 tools, one job each."
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "planning", "ai-agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://opencode.ai/docs/openplan"
Documentation = "https://opencode.ai/docs/openplan"
Source = "https://github.com/anomalyco/opencode"

[project.scripts]
openplan = "openplan.__main__:main"
openplan-mcp = "openplan.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openplan*"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
